--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Array & String Methods</title>
 </head>
 <body>
+    <p> Hii</p>
     <script src="./script.js"></script>
 </body>
 </html>
